--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,5 @@ after_success: |
   cd ../.. &&
   rm -rf kcov-master &&
   mkdir -p coverage &&
-  kcov coverage tests/test_cookiecutter.sh &&
+  kcov coverage ./tests/test_cookiecutter.sh &&
   bash <(curl -s https://codecov.io/bash)
