--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,10 @@
+branches:
+  only:
+    - master
+    - develop
 sudo: false
-
 language: python
-
-python:
-  - 2.7
-
-install:
-  - pip install codecov
-
-script:
-  - coverage run tests.py
-
-after_success:
-  - codecov
+python: "3.6"
+install: pip install -r requirements.txt
+script: invoke tests
+after_success: codecov
