Fix failing build;Add AppVeyor badge

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,11 @@ branches:
     - develop
 sudo: false
 language: python
-python: "3.6"
-install: pip install -r requirements.txt
+python:
+  - "2.7"
+  - "3.4"
+  - "3.5"
+  - "3.6"
+  - "3.7"
 script: invoke tests
 after_success: codecov
