--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,14 +5,15 @@ environment:
     - PYTHON: "C:\\Python34"
     - PYTHON: "C:\\Python35"
     - PYTHON: "C:\\Python36"
-    - PYTHON: "C:\\Python37"
     - PYTHON: "C:\\Python27-x64"
     - PYTHON: "C:\\Python34-x64"
       DISTUTILS_USE_SDK: "1"
     - PYTHON: "C:\\Python35-x64"
     - PYTHON: "C:\\Python36-x64"
-    - PYTHON: "C:\\Python37-x64"
-install: "%PYTHON%\\python.exe -m pip install -r requirements.txt"
+install:
+  - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
+  - "python -m pip install --upgrade pip"
+  - "python -m pip install -r requirements.txt"
 build: off
-test_script: "%PYTHON%\\Scripts\\invoke.exe tests"
-after_test: "%PYTHON%\\Scripts\\codecov.exe"
+test_script: "invoke tests"
+after_test: "codecov"
