--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
-os:
-  - linux
-  - osx
+os: linux
 branches:
   only:
     - master
@@ -12,5 +10,33 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
+matrix:
+  include:
+    - os: osx
+    language: generic
+    env: PYTHON=2.7.15
+    - os: osx
+    language: generic
+    env: PYTHON=3.4.8
+    - os: osx
+    language: generic
+    env: PYTHON=3.5.5
+    - os: osx
+    language: generic
+    env: PYTHON=3.6.6
+before_install: |
+  if [ "$TRAVIS_OS_NAME" == "osx" ]; then
+    brew update
+    brew install openssl readline
+    brew outdated pyenv || brew upgrade pyenv
+    brew install pyenv-virtualenv
+    pyenv install $PYTHON
+    export PYENV_VERSION=$PYTHON
+    export PATH="/Users/travis/.pyenv/shims:${PATH}"
+    pyenv-virtualenv venv
+    source venv/bin/activate
+    python --version
+  fi
+install: pip install -r requirements.txt
 script: invoke tests
 after_success: codecov
