--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
+  - "3.7"
 
 matrix:
   include:
@@ -32,6 +33,10 @@ matrix:
   - os: osx
     language: generic
     env: PYTHON=3.6.6
+
+  - os: osx
+    language: generic
+    env: PYTHON=3.7.0
 
 before_install: |
   if [ "$TRAVIS_OS_NAME" == "osx" ]; then
